--- a/assest/css/genral.css
+++ b/assest/css/genral.css
@@ -1,4 +1,44 @@
-.fa-angles-right , .fa-location-arrow{
-    font-size: 30px;
-    color: rgb(237, 204, 112);
+
+.mybutton {
+  position: relative;
+  text-decoration: none;
+  color: #fff;
+  background: linear-gradient(45deg, #0ce39a, #69007f, #fc0987);
+  padding: 4px 20px;
+  border-radius: 10px;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.mybutton span {
+  position: relative;
+  z-index: 1;
+}
+
+.mybutton::before {
+  content: "";
+  position: absolute;
+  inset: 1px;
+  background: #272727;
+  border-radius: 9px;
+  transition: 0.5s;
+}
+
+.mybutton:hover::before {
+  opacity: 0.7;
+}
+
+.mybutton::after {
+  content: "";
+  position: absolute;
+  inset: 0px;
+  background: linear-gradient(45deg, #0ce39a, #69007f, #fc0987);
+  border-radius: 9px;
+  transition: 0.5s;
+  opacity: 0;
+  filter: blur(20px);
+}
+
+.mybutton:hover:after {
+  opacity: 1;
 }
